--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -1,7 +1,7 @@
 .app,
 .display,
 .button_panel {
-  width: 400px;
+  width: 700px;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -19,7 +19,7 @@
   height: 100px;
   color: #fff;
   font-weight: bold;
-  font-size: 60px;
+  font-size: 20px;
   position: relative;
 }
 
